--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -33,7 +33,7 @@ COPY composer.json composer.lock ./
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Install PHP dependencies
-RUN composer install --no-dev --optimize-autoloader --no-scripts
+RUN composer install --no-dev --optimize-autoloader
 
 # Copy the rest of the application
 COPY . .
