--- a/core/package.json
+++ b/core/package.json
@@ -23,6 +23,7 @@
         "bootstrap": "^5.3.8",
         "chart.js": "^4.5.1",
         "dayjs": "^1.11.19",
+        "gsap": "^3.14.2",
         "jquery": "^3.7.1",
         "react": "^19.2.3",
         "react-chartjs-2": "^5.3.1",
